--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,4 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/empty"
+        android:gravity="center_horizontal"
+        android:padding="16dp"
+        android:text="@string/empty_forecast_list"
+        android:layout_height="match_parent" />
+
+
 </FrameLayout>
